# notifier

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: bot.py  gemini.py  main.py  utils.py
src/database/: character.py  habit.py  mongo_object.py  performance.py  user.py
src/flow/: add_habit.py  end_habit.py  notify.py  settings.py  test.py  utils.py
src/gemini/: conversations.py
src/models/: character.py  habit.py  mongo_object.py  performance.py  user.py
src/ui/: character_picker.py  weekday_picker.py
